// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a big input 1`] = `
<div>
  <form
    class="usa-search usa-search--big"
    role="search"
  >
    <label
      class="usa-sr-only"
      for="search"
    >
      Search
    </label>
    <input
      class="usa-input"
      id="search"
      name="query"
      type="search"
    />
    <button
      class="usa-button"
      type="submit"
    >
      <span
        class="usa-search__submit-text"
      >
        Search
      </span>
    </button>
  </form>
</div>
`;

exports[`renders a small search input 1`] = `
<div>
  <form
    class="usa-search usa-search--small"
    role="search"
  >
    <label
      class="usa-sr-only"
      for="search"
    >
      Search
    </label>
    <input
      class="usa-input"
      id="search"
      name="query"
      style="height: 37px;"
      type="search"
    />
    <button
      class="usa-button"
      style="height: 37px;"
      type="submit"
    >
      <span
        class="usa-sr-only"
      >
        Search
      </span>
    </button>
  </form>
</div>
`;
